; ModuleID = '/home/carl/AnghaBench/Craft/src/extr_db.c_db_auth_set.c'
source_filename = "/home/carl/AnghaBench/Craft/src/extr_db.c_db_auth_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@db_enabled = common dso_local global i32 0, align 4
@db_auth_set.query = internal global i8* getelementptr inbounds ([89 x i8], [89 x i8]* @.str, i32 0, i32 0), align 8
@.str = private unnamed_addr constant [89 x i8] c"insert or replace into auth.identity_token (username, token, selected) values (?, ?, ?);\00", align 1
@db = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @db_auth_set(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i32, i32* @db_enabled, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %9, label %8

8:                                                ; preds = %2
  br label %27

9:                                                ; preds = %2
  %10 = load i32, i32* @db, align 4
  %11 = load i8*, i8** @db_auth_set.query, align 8
  %12 = call i32 @sqlite3_prepare_v2(i32 %10, i8* %11, i32 -1, i32** %5, i32* null)
  %13 = load i32*, i32** %5, align 8
  %14 = load i8*, i8** %3, align 8
  %15 = call i32 @sqlite3_bind_text(i32* %13, i32 1, i8* %14, i32 -1, i32* null)
  %16 = load i32*, i32** %5, align 8
  %17 = load i8*, i8** %4, align 8
  %18 = call i32 @sqlite3_bind_text(i32* %16, i32 2, i8* %17, i32 -1, i32* null)
  %19 = load i32*, i32** %5, align 8
  %20 = call i32 @sqlite3_bind_int(i32* %19, i32 3, i32 1)
  %21 = load i32*, i32** %5, align 8
  %22 = call i32 @sqlite3_step(i32* %21)
  %23 = load i32*, i32** %5, align 8
  %24 = call i32 @sqlite3_finalize(i32* %23)
  %25 = load i8*, i8** %3, align 8
  %26 = call i32 @db_auth_select(i8* %25)
  br label %27

27:                                               ; preds = %9, %8
  ret void
}

declare dso_local i32 @sqlite3_prepare_v2(i32, i8*, i32, i32**, i32*) #1

declare dso_local i32 @sqlite3_bind_text(i32*, i32, i8*, i32, i32*) #1

declare dso_local i32 @sqlite3_bind_int(i32*, i32, i32) #1

declare dso_local i32 @sqlite3_step(i32*) #1

declare dso_local i32 @sqlite3_finalize(i32*) #1

declare dso_local i32 @db_auth_select(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
